// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages howManyProducts should render correctly for multi op 1`] = `
<Component
  description="How Many Products entry page of the Create Fares Data Service"
  errors={Array []}
  title="How Many Products - Create Fares Data Service"
>
  <CsrfForm
    action="/api/howManyProducts"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <div
      className="govuk-form-group"
    >
      <label
        htmlFor="number-of-products"
      >
        <h1
          className="govuk-heading-l"
          id="page-heading"
        >
          How many multi operator tickets do you have for the selected services?
        </h1>
      </label>
      <div
        className="govuk-hint"
        id="number-of-products-hint"
      >
        Enter the number of multi operator tickets below. Up to a maximum of 10 at once.
      </div>
      <FormElementWrapper
        errorClass="govuk-input--error"
        errorId="number-of-products"
        errors={Array []}
      >
        <input
          aria-describedby="number-of-products-hint"
          className="govuk-input govuk-input--width-2"
          defaultValue=""
          id="number-of-products"
          name="numberOfProductsInput"
          type="text"
        />
      </FormElementWrapper>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages howManyProducts should render correctly for non multi op 1`] = `
<Component
  description="How Many Products entry page of the Create Fares Data Service"
  errors={Array []}
  title="How Many Products - Create Fares Data Service"
>
  <CsrfForm
    action="/api/howManyProducts"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <div
      className="govuk-form-group"
    >
      <label
        htmlFor="number-of-products"
      >
        <h1
          className="govuk-heading-l"
          id="page-heading"
        >
          How many period tickets do you have for this geographic zone?
        </h1>
      </label>
      <div
        className="govuk-hint"
        id="number-of-products-hint"
      >
        Enter the number of period tickets below. Up to a maximum of 10 at once.
      </div>
      <FormElementWrapper
        errorClass="govuk-input--error"
        errorId="number-of-products"
        errors={Array []}
      >
        <input
          aria-describedby="number-of-products-hint"
          className="govuk-input govuk-input--width-2"
          defaultValue=""
          id="number-of-products"
          name="numberOfProductsInput"
          type="text"
        />
      </FormElementWrapper>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages howManyProducts should render correctly when a user is redirected to the page from itself when incorrect data is entered (multiOperator) 1`] = `
<Component
  description="How Many Products entry page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Enter a whole number between 1 and 10",
        "id": "how-many-products-error",
        "userInput": "0",
      },
    ]
  }
  title="How Many Products - Create Fares Data Service"
>
  <CsrfForm
    action="/api/howManyProducts"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Enter a whole number between 1 and 10",
            "id": "how-many-products-error",
            "userInput": "0",
          },
        ]
      }
    />
    <div
      className="govuk-form-group govuk-form-group--error"
    >
      <label
        htmlFor="number-of-products"
      >
        <h1
          className="govuk-heading-l"
          id="page-heading"
        >
          How many multi operator tickets do you have for this geographic zone?
        </h1>
      </label>
      <div
        className="govuk-hint"
        id="number-of-products-hint"
      >
        Enter the number of multi operator tickets below. Up to a maximum of 10 at once.
      </div>
      <FormElementWrapper
        errorClass="govuk-input--error"
        errorId="number-of-products"
        errors={
          Array [
            Object {
              "errorMessage": "Enter a whole number between 1 and 10",
              "id": "how-many-products-error",
              "userInput": "0",
            },
          ]
        }
      >
        <input
          aria-describedby="number-of-products-hint"
          className="govuk-input govuk-input--width-2"
          defaultValue="0"
          id="number-of-products"
          name="numberOfProductsInput"
          type="text"
        />
      </FormElementWrapper>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages howManyProducts should render correctly when a user is redirected to the page from itself when incorrect data is entered (multiOperator) 2`] = `
<Component
  description="How Many Products entry page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Enter a whole number between 1 and 10",
        "id": "how-many-products-error",
        "userInput": "11",
      },
    ]
  }
  title="How Many Products - Create Fares Data Service"
>
  <CsrfForm
    action="/api/howManyProducts"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Enter a whole number between 1 and 10",
            "id": "how-many-products-error",
            "userInput": "11",
          },
        ]
      }
    />
    <div
      className="govuk-form-group govuk-form-group--error"
    >
      <label
        htmlFor="number-of-products"
      >
        <h1
          className="govuk-heading-l"
          id="page-heading"
        >
          How many multi operator tickets do you have for this geographic zone?
        </h1>
      </label>
      <div
        className="govuk-hint"
        id="number-of-products-hint"
      >
        Enter the number of multi operator tickets below. Up to a maximum of 10 at once.
      </div>
      <FormElementWrapper
        errorClass="govuk-input--error"
        errorId="number-of-products"
        errors={
          Array [
            Object {
              "errorMessage": "Enter a whole number between 1 and 10",
              "id": "how-many-products-error",
              "userInput": "11",
            },
          ]
        }
      >
        <input
          aria-describedby="number-of-products-hint"
          className="govuk-input govuk-input--width-2"
          defaultValue="11"
          id="number-of-products"
          name="numberOfProductsInput"
          type="text"
        />
      </FormElementWrapper>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages howManyProducts should render correctly when a user is redirected to the page from itself when incorrect data is entered (multiOperator) 3`] = `
<Component
  description="How Many Products entry page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Enter a whole number between 1 and 10",
        "id": "how-many-products-error",
        "userInput": "99",
      },
    ]
  }
  title="How Many Products - Create Fares Data Service"
>
  <CsrfForm
    action="/api/howManyProducts"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Enter a whole number between 1 and 10",
            "id": "how-many-products-error",
            "userInput": "99",
          },
        ]
      }
    />
    <div
      className="govuk-form-group govuk-form-group--error"
    >
      <label
        htmlFor="number-of-products"
      >
        <h1
          className="govuk-heading-l"
          id="page-heading"
        >
          How many multi operator tickets do you have for this geographic zone?
        </h1>
      </label>
      <div
        className="govuk-hint"
        id="number-of-products-hint"
      >
        Enter the number of multi operator tickets below. Up to a maximum of 10 at once.
      </div>
      <FormElementWrapper
        errorClass="govuk-input--error"
        errorId="number-of-products"
        errors={
          Array [
            Object {
              "errorMessage": "Enter a whole number between 1 and 10",
              "id": "how-many-products-error",
              "userInput": "99",
            },
          ]
        }
      >
        <input
          aria-describedby="number-of-products-hint"
          className="govuk-input govuk-input--width-2"
          defaultValue="99"
          id="number-of-products"
          name="numberOfProductsInput"
          type="text"
        />
      </FormElementWrapper>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages howManyProducts should render correctly when a user is redirected to the page from itself when incorrect data is entered (multiOperator) 4`] = `
<Component
  description="How Many Products entry page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Enter a whole number between 1 and 10",
        "id": "how-many-products-error",
        "userInput": "4.65",
      },
    ]
  }
  title="How Many Products - Create Fares Data Service"
>
  <CsrfForm
    action="/api/howManyProducts"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Enter a whole number between 1 and 10",
            "id": "how-many-products-error",
            "userInput": "4.65",
          },
        ]
      }
    />
    <div
      className="govuk-form-group govuk-form-group--error"
    >
      <label
        htmlFor="number-of-products"
      >
        <h1
          className="govuk-heading-l"
          id="page-heading"
        >
          How many multi operator tickets do you have for this geographic zone?
        </h1>
      </label>
      <div
        className="govuk-hint"
        id="number-of-products-hint"
      >
        Enter the number of multi operator tickets below. Up to a maximum of 10 at once.
      </div>
      <FormElementWrapper
        errorClass="govuk-input--error"
        errorId="number-of-products"
        errors={
          Array [
            Object {
              "errorMessage": "Enter a whole number between 1 and 10",
              "id": "how-many-products-error",
              "userInput": "4.65",
            },
          ]
        }
      >
        <input
          aria-describedby="number-of-products-hint"
          className="govuk-input govuk-input--width-2"
          defaultValue="4.65"
          id="number-of-products"
          name="numberOfProductsInput"
          type="text"
        />
      </FormElementWrapper>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages howManyProducts should render correctly when a user is redirected to the page from itself when incorrect data is entered (multiOperator) 5`] = `
<Component
  description="How Many Products entry page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Enter a whole number between 1 and 10",
        "id": "how-many-products-error",
        "userInput": "some strange thing a user would type",
      },
    ]
  }
  title="How Many Products - Create Fares Data Service"
>
  <CsrfForm
    action="/api/howManyProducts"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Enter a whole number between 1 and 10",
            "id": "how-many-products-error",
            "userInput": "some strange thing a user would type",
          },
        ]
      }
    />
    <div
      className="govuk-form-group govuk-form-group--error"
    >
      <label
        htmlFor="number-of-products"
      >
        <h1
          className="govuk-heading-l"
          id="page-heading"
        >
          How many multi operator tickets do you have for this geographic zone?
        </h1>
      </label>
      <div
        className="govuk-hint"
        id="number-of-products-hint"
      >
        Enter the number of multi operator tickets below. Up to a maximum of 10 at once.
      </div>
      <FormElementWrapper
        errorClass="govuk-input--error"
        errorId="number-of-products"
        errors={
          Array [
            Object {
              "errorMessage": "Enter a whole number between 1 and 10",
              "id": "how-many-products-error",
              "userInput": "some strange thing a user would type",
            },
          ]
        }
      >
        <input
          aria-describedby="number-of-products-hint"
          className="govuk-input govuk-input--width-2"
          defaultValue="some strange thing a user would type"
          id="number-of-products"
          name="numberOfProductsInput"
          type="text"
        />
      </FormElementWrapper>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages howManyProducts should render correctly when a user is redirected to the page from itself when incorrect data is entered (multiOperator) 6`] = `
<Component
  description="How Many Products entry page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Enter a whole number between 1 and 10",
        "id": "how-many-products-error",
        "userInput": "",
      },
    ]
  }
  title="How Many Products - Create Fares Data Service"
>
  <CsrfForm
    action="/api/howManyProducts"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Enter a whole number between 1 and 10",
            "id": "how-many-products-error",
            "userInput": "",
          },
        ]
      }
    />
    <div
      className="govuk-form-group govuk-form-group--error"
    >
      <label
        htmlFor="number-of-products"
      >
        <h1
          className="govuk-heading-l"
          id="page-heading"
        >
          How many multi operator tickets do you have for this geographic zone?
        </h1>
      </label>
      <div
        className="govuk-hint"
        id="number-of-products-hint"
      >
        Enter the number of multi operator tickets below. Up to a maximum of 10 at once.
      </div>
      <FormElementWrapper
        errorClass="govuk-input--error"
        errorId="number-of-products"
        errors={
          Array [
            Object {
              "errorMessage": "Enter a whole number between 1 and 10",
              "id": "how-many-products-error",
              "userInput": "",
            },
          ]
        }
      >
        <input
          aria-describedby="number-of-products-hint"
          className="govuk-input govuk-input--width-2"
          defaultValue=""
          id="number-of-products"
          name="numberOfProductsInput"
          type="text"
        />
      </FormElementWrapper>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages howManyProducts should render correctly when a user is redirected to the page from itself when incorrect data is entered (multiOperator) 7`] = `
<Component
  description="How Many Products entry page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Enter a whole number between 1 and 10",
        "id": "how-many-products-error",
        "userInput": "       ",
      },
    ]
  }
  title="How Many Products - Create Fares Data Service"
>
  <CsrfForm
    action="/api/howManyProducts"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Enter a whole number between 1 and 10",
            "id": "how-many-products-error",
            "userInput": "       ",
          },
        ]
      }
    />
    <div
      className="govuk-form-group govuk-form-group--error"
    >
      <label
        htmlFor="number-of-products"
      >
        <h1
          className="govuk-heading-l"
          id="page-heading"
        >
          How many multi operator tickets do you have for this geographic zone?
        </h1>
      </label>
      <div
        className="govuk-hint"
        id="number-of-products-hint"
      >
        Enter the number of multi operator tickets below. Up to a maximum of 10 at once.
      </div>
      <FormElementWrapper
        errorClass="govuk-input--error"
        errorId="number-of-products"
        errors={
          Array [
            Object {
              "errorMessage": "Enter a whole number between 1 and 10",
              "id": "how-many-products-error",
              "userInput": "       ",
            },
          ]
        }
      >
        <input
          aria-describedby="number-of-products-hint"
          className="govuk-input govuk-input--width-2"
          defaultValue="       "
          id="number-of-products"
          name="numberOfProductsInput"
          type="text"
        />
      </FormElementWrapper>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages howManyProducts should render correctly when a user is redirected to the page from itself when incorrect data is entered (non-multiOperator) 1`] = `
<Component
  description="How Many Products entry page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Enter a whole number between 1 and 10",
        "id": "how-many-products-error",
        "userInput": "0",
      },
    ]
  }
  title="How Many Products - Create Fares Data Service"
>
  <CsrfForm
    action="/api/howManyProducts"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Enter a whole number between 1 and 10",
            "id": "how-many-products-error",
            "userInput": "0",
          },
        ]
      }
    />
    <div
      className="govuk-form-group govuk-form-group--error"
    >
      <label
        htmlFor="number-of-products"
      >
        <h1
          className="govuk-heading-l"
          id="page-heading"
        >
          How many period tickets do you have for the selected services?
        </h1>
      </label>
      <div
        className="govuk-hint"
        id="number-of-products-hint"
      >
        Enter the number of period tickets below. Up to a maximum of 10 at once.
      </div>
      <FormElementWrapper
        errorClass="govuk-input--error"
        errorId="number-of-products"
        errors={
          Array [
            Object {
              "errorMessage": "Enter a whole number between 1 and 10",
              "id": "how-many-products-error",
              "userInput": "0",
            },
          ]
        }
      >
        <input
          aria-describedby="number-of-products-hint"
          className="govuk-input govuk-input--width-2"
          defaultValue="0"
          id="number-of-products"
          name="numberOfProductsInput"
          type="text"
        />
      </FormElementWrapper>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages howManyProducts should render correctly when a user is redirected to the page from itself when incorrect data is entered (non-multiOperator) 2`] = `
<Component
  description="How Many Products entry page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Enter a whole number between 1 and 10",
        "id": "how-many-products-error",
        "userInput": "11",
      },
    ]
  }
  title="How Many Products - Create Fares Data Service"
>
  <CsrfForm
    action="/api/howManyProducts"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Enter a whole number between 1 and 10",
            "id": "how-many-products-error",
            "userInput": "11",
          },
        ]
      }
    />
    <div
      className="govuk-form-group govuk-form-group--error"
    >
      <label
        htmlFor="number-of-products"
      >
        <h1
          className="govuk-heading-l"
          id="page-heading"
        >
          How many period tickets do you have for the selected services?
        </h1>
      </label>
      <div
        className="govuk-hint"
        id="number-of-products-hint"
      >
        Enter the number of period tickets below. Up to a maximum of 10 at once.
      </div>
      <FormElementWrapper
        errorClass="govuk-input--error"
        errorId="number-of-products"
        errors={
          Array [
            Object {
              "errorMessage": "Enter a whole number between 1 and 10",
              "id": "how-many-products-error",
              "userInput": "11",
            },
          ]
        }
      >
        <input
          aria-describedby="number-of-products-hint"
          className="govuk-input govuk-input--width-2"
          defaultValue="11"
          id="number-of-products"
          name="numberOfProductsInput"
          type="text"
        />
      </FormElementWrapper>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages howManyProducts should render correctly when a user is redirected to the page from itself when incorrect data is entered (non-multiOperator) 3`] = `
<Component
  description="How Many Products entry page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Enter a whole number between 1 and 10",
        "id": "how-many-products-error",
        "userInput": "99",
      },
    ]
  }
  title="How Many Products - Create Fares Data Service"
>
  <CsrfForm
    action="/api/howManyProducts"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Enter a whole number between 1 and 10",
            "id": "how-many-products-error",
            "userInput": "99",
          },
        ]
      }
    />
    <div
      className="govuk-form-group govuk-form-group--error"
    >
      <label
        htmlFor="number-of-products"
      >
        <h1
          className="govuk-heading-l"
          id="page-heading"
        >
          How many period tickets do you have for the selected services?
        </h1>
      </label>
      <div
        className="govuk-hint"
        id="number-of-products-hint"
      >
        Enter the number of period tickets below. Up to a maximum of 10 at once.
      </div>
      <FormElementWrapper
        errorClass="govuk-input--error"
        errorId="number-of-products"
        errors={
          Array [
            Object {
              "errorMessage": "Enter a whole number between 1 and 10",
              "id": "how-many-products-error",
              "userInput": "99",
            },
          ]
        }
      >
        <input
          aria-describedby="number-of-products-hint"
          className="govuk-input govuk-input--width-2"
          defaultValue="99"
          id="number-of-products"
          name="numberOfProductsInput"
          type="text"
        />
      </FormElementWrapper>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages howManyProducts should render correctly when a user is redirected to the page from itself when incorrect data is entered (non-multiOperator) 4`] = `
<Component
  description="How Many Products entry page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Enter a whole number between 1 and 10",
        "id": "how-many-products-error",
        "userInput": "4.65",
      },
    ]
  }
  title="How Many Products - Create Fares Data Service"
>
  <CsrfForm
    action="/api/howManyProducts"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Enter a whole number between 1 and 10",
            "id": "how-many-products-error",
            "userInput": "4.65",
          },
        ]
      }
    />
    <div
      className="govuk-form-group govuk-form-group--error"
    >
      <label
        htmlFor="number-of-products"
      >
        <h1
          className="govuk-heading-l"
          id="page-heading"
        >
          How many period tickets do you have for the selected services?
        </h1>
      </label>
      <div
        className="govuk-hint"
        id="number-of-products-hint"
      >
        Enter the number of period tickets below. Up to a maximum of 10 at once.
      </div>
      <FormElementWrapper
        errorClass="govuk-input--error"
        errorId="number-of-products"
        errors={
          Array [
            Object {
              "errorMessage": "Enter a whole number between 1 and 10",
              "id": "how-many-products-error",
              "userInput": "4.65",
            },
          ]
        }
      >
        <input
          aria-describedby="number-of-products-hint"
          className="govuk-input govuk-input--width-2"
          defaultValue="4.65"
          id="number-of-products"
          name="numberOfProductsInput"
          type="text"
        />
      </FormElementWrapper>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages howManyProducts should render correctly when a user is redirected to the page from itself when incorrect data is entered (non-multiOperator) 5`] = `
<Component
  description="How Many Products entry page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Enter a whole number between 1 and 10",
        "id": "how-many-products-error",
        "userInput": "some strange thing a user would type",
      },
    ]
  }
  title="How Many Products - Create Fares Data Service"
>
  <CsrfForm
    action="/api/howManyProducts"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Enter a whole number between 1 and 10",
            "id": "how-many-products-error",
            "userInput": "some strange thing a user would type",
          },
        ]
      }
    />
    <div
      className="govuk-form-group govuk-form-group--error"
    >
      <label
        htmlFor="number-of-products"
      >
        <h1
          className="govuk-heading-l"
          id="page-heading"
        >
          How many period tickets do you have for the selected services?
        </h1>
      </label>
      <div
        className="govuk-hint"
        id="number-of-products-hint"
      >
        Enter the number of period tickets below. Up to a maximum of 10 at once.
      </div>
      <FormElementWrapper
        errorClass="govuk-input--error"
        errorId="number-of-products"
        errors={
          Array [
            Object {
              "errorMessage": "Enter a whole number between 1 and 10",
              "id": "how-many-products-error",
              "userInput": "some strange thing a user would type",
            },
          ]
        }
      >
        <input
          aria-describedby="number-of-products-hint"
          className="govuk-input govuk-input--width-2"
          defaultValue="some strange thing a user would type"
          id="number-of-products"
          name="numberOfProductsInput"
          type="text"
        />
      </FormElementWrapper>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages howManyProducts should render correctly when a user is redirected to the page from itself when incorrect data is entered (non-multiOperator) 6`] = `
<Component
  description="How Many Products entry page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Enter a whole number between 1 and 10",
        "id": "how-many-products-error",
        "userInput": "",
      },
    ]
  }
  title="How Many Products - Create Fares Data Service"
>
  <CsrfForm
    action="/api/howManyProducts"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Enter a whole number between 1 and 10",
            "id": "how-many-products-error",
            "userInput": "",
          },
        ]
      }
    />
    <div
      className="govuk-form-group govuk-form-group--error"
    >
      <label
        htmlFor="number-of-products"
      >
        <h1
          className="govuk-heading-l"
          id="page-heading"
        >
          How many period tickets do you have for the selected services?
        </h1>
      </label>
      <div
        className="govuk-hint"
        id="number-of-products-hint"
      >
        Enter the number of period tickets below. Up to a maximum of 10 at once.
      </div>
      <FormElementWrapper
        errorClass="govuk-input--error"
        errorId="number-of-products"
        errors={
          Array [
            Object {
              "errorMessage": "Enter a whole number between 1 and 10",
              "id": "how-many-products-error",
              "userInput": "",
            },
          ]
        }
      >
        <input
          aria-describedby="number-of-products-hint"
          className="govuk-input govuk-input--width-2"
          defaultValue=""
          id="number-of-products"
          name="numberOfProductsInput"
          type="text"
        />
      </FormElementWrapper>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages howManyProducts should render correctly when a user is redirected to the page from itself when incorrect data is entered (non-multiOperator) 7`] = `
<Component
  description="How Many Products entry page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Enter a whole number between 1 and 10",
        "id": "how-many-products-error",
        "userInput": "       ",
      },
    ]
  }
  title="How Many Products - Create Fares Data Service"
>
  <CsrfForm
    action="/api/howManyProducts"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Enter a whole number between 1 and 10",
            "id": "how-many-products-error",
            "userInput": "       ",
          },
        ]
      }
    />
    <div
      className="govuk-form-group govuk-form-group--error"
    >
      <label
        htmlFor="number-of-products"
      >
        <h1
          className="govuk-heading-l"
          id="page-heading"
        >
          How many period tickets do you have for the selected services?
        </h1>
      </label>
      <div
        className="govuk-hint"
        id="number-of-products-hint"
      >
        Enter the number of period tickets below. Up to a maximum of 10 at once.
      </div>
      <FormElementWrapper
        errorClass="govuk-input--error"
        errorId="number-of-products"
        errors={
          Array [
            Object {
              "errorMessage": "Enter a whole number between 1 and 10",
              "id": "how-many-products-error",
              "userInput": "       ",
            },
          ]
        }
      >
        <input
          aria-describedby="number-of-products-hint"
          className="govuk-input govuk-input--width-2"
          defaultValue="       "
          id="number-of-products"
          name="numberOfProductsInput"
          type="text"
        />
      </FormElementWrapper>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;
